--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
             <artifactId>mockito-all</artifactId>
             <version>1.9.5</version>
         </dependency>
+	    <dependency>
+		    <groupId>org.jetbrains</groupId>
+		    <artifactId>annotations</artifactId>
+		    <version>RELEASE</version>
+		    <scope>compile</scope>
+	    </dependency>
     </dependencies>
 
     <build>
